--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   community_material_icon: ^3.5.95
+  shared_preferences: ^0.5.3+1
   
 dev_dependencies:
   flutter_test:
